adjust name endpint users
